Fix alignment of product title in catalog and alignment of contact-us block

--- a/source/sass/blocks/contact-us.scss
+++ b/source/sass/blocks/contact-us.scss
@@ -8,6 +8,7 @@
   padding-left: 20px;
 
   @include md-size() {
+    width: 100%;
     padding-top: 63px;
     padding-right: 70px;
     padding-bottom: 59px;
